# teste1

./: CHANGELOG.rst  ci-constraints-requirements.txt
.github/workflows/: ci.yml
docs/: spelling_wordlist.txt
src/cryptography/hazmat/bindings/_rust/: pkcs7.pyi
src/cryptography/hazmat/primitives/serialization/: pkcs7.py
src/rust/: Cargo.toml
src/rust/cryptography-cffi/: Cargo.toml
src/rust/cryptography-key-parsing/: Cargo.toml
src/rust/cryptography-openssl/: Cargo.toml
src/rust/src/: asn1.rs  pkcs7.rs  test_support.rs  types.rs
src/rust/src/backend/: kdf.rs
src/rust/src/x509/: certificate.rs
tests/hazmat/primitives/: test_pkcs7.py
tests/x509/: test_x509_ext.py
