[package]
name = "cryptography-cffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
pyo3 = { version = "0.22.2", features = ["abi3"] }
openssl-sys = { git = "https://github.com/sfackler/rust-openssl" }

[build-dependencies]
cc = "1.1.15"
