[package]
name = "cryptography-key-parsing"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
asn1 = { version = "0.17.0", default-features = false }
cfg-if = "1"
openssl = { git = "https://github.com/sfackler/rust-openssl" }
openssl-sys = { git = "https://github.com/sfackler/rust-openssl" }
cryptography-x509 = { path = "../cryptography-x509" }
