[package]
name = "cryptography-openssl"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1"
openssl = { git = "https://github.com/sfackler/rust-openssl" }
ffi = { package = "openssl-sys", git = "https://github.com/sfackler/rust-openssl" }
foreign-types = "0.3"
foreign-types-shared = "0.1"
